--- a/2023-09-27.md
+++ b/2023-09-27.md
@@ -1,4 +1,5 @@
 **MikroTIk setup**
+- Név: MikroTik_router
 - RAM: 128MB
 - CPU: 1
 - SSD: 2GB
@@ -19,26 +20,28 @@ ip/dhcp-client/add interface=ether3 disabled=no
 
 ip address/add interface=ether2 address=192.168.5.1/24
 
-ip firewall/nat add chain=srcat out-interface ether1 action=masquerade
+ip firewall/nat add chain=srcat out-interface=ether1 action=masquerade
 
-ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=50000 to-adresses=192.168.5.2 to-ports protocol=tcp
+ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=50000 to-adresses=192.168.5.2 to-ports=3389 protocol=tcp
 
 ```
 
 
-win után
+win után  (? - not yet known)
 
 ```
 ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=80 to-addresses=192.168.5.2 protocol=tcp
 ```
 
 
-win22coreGG (non GUI)
+**win22coreGG (non GUI)**
 - Név: win2022srvgg
 - network: internal
 - RAM: 2gb
 - CPU: 2
 - IP 192.168.9.2/24
+
+
 - távoli elérés
 - "oldja meg hogy legyen internet a windows serveren!" (ping working)
 - webszerver, weboldal
@@ -46,10 +49,10 @@ win22coreGG (non GUI)
 
 time and currency format: magyar
 
-jelszó: #Aa12346789@
+jelszó: #Aa12346789!
 
 ```
-install WindowsFeature AD_domain services -includeManagementTools
+Install-windowsfeature AD-domain-services -includeManagementTools
 ```
 
 ```
@@ -63,7 +66,7 @@ wincore html
 ```
 cd \
 
-cd .\inetpub\wwwroot
+cd .\inetpub\wwwroot\
 
 notepad index.html
 ```
@@ -76,3 +79,61 @@ meta charset ="utf8"
 
 
 feladat: mikrotik, win core servre(ip, internet van), win core program telepítése
+
+mikrotik oldalt dob be> rossz port, nincs
+
+ip firewall/nat remove
+V
+2
+
+tartományba léptetés
+this pc> properties> system properties> *pc name change*> "win10client"
+
+
+192.168.4.1
+
+
+
+
+
+
+**TEST WEBSITE**
+```
+<HTML>
+
+<HEAD>
+
+<TITLE>Your Title Here</TITLE>
+
+</HEAD>
+
+<BODY BGCOLOR="FFFFFF">
+
+<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+
+<HR>
+
+<a href="http://somegreatsite.com">Link Name</a>
+
+is a link to another nifty site
+
+<H1>This is a Header</H1>
+
+<H2>This is a Medium Header</H2>
+
+Send me mail at <a href="mailto:support@yourcompany.com">
+
+support@yourcompany.com</a>.
+
+<P> This is a new paragraph!
+
+<P> <B>This is a new paragraph!</B>
+
+<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+
+<HR>
+
+</BODY>
+
+</HTML>
+```
