--- a/2023_09_08.md
+++ b/2023_09_08.md
@@ -29,7 +29,8 @@ ip route NetID SUbnetMask "kimenő interface | next hopp IP" Administrative dist
 	AD: egy szám, nagyobb mint 1
 
 
-----------SSH BEÁLLÍTÁS----------
+**SSH Setup**
+```
 ip domain name "domain"
 crypto key generate rsa general-keys modulus 1024
 ip ssh ver 2
@@ -42,37 +43,50 @@ transport input ssh
 login local		-helyi adatbázisból hitelesít (user admin privilege 15 secret "jelszó"
 exit
 copy run start
+```
 
 
 
-
-DHCP K
-ip dhcp excluded-address "start ip" "end ip"		-ez egy tartományra van, ha csak egy van akkor csak be kell írni csak azt az egyet
-ismételni szükség szerint ???
-
-ip dhcp pool "POOL NÉV"					-a nagybetűs pool név könnyebben észrevehető
+**DHCP Setup**
+```
+ip dhcp pool "POOL NÉV"		
 default-router "ip cím"
 dns-server "ip cím"
 domain-name "domain név"
 network "NetID" "subnetmask"
-
+```
 a dhcp csak akkor működik, ha van egy interface-e, kapcsolatban kell lennie a networkkel
 
-
-
+**ipv4 setup**
+```
+ip dhcp excluded-address 192.168.10.1 192.168.10.9
+ip dhcp excluded-address 192.168.10.254
+ip dhcp pool LAN-POOL-1
+network 192.168.10.0 255.255.255.0
+default-router 192.168.10.1
+dns-server 192.168.11.5
+domain-name example.com
+end
+```
 
 
 Kényelmi / quality of life:
+```
 no ip domain-lookup			- hibás parancs feloldás tiltása
 do terminal history size 250		- előzmény tároló méret növelése		
 line con 0	
 exec-timeout 0 0			- a konzol soha nem léptet ki - amikor kész a munka, illik vissza állítani normális időre
 logging synchronous			- rendszerüzenetek szinkronizálása - uninterrupted typing
+```
 
 
 
 konzol jelszó állítás után login		- nem mindenhol szükséges, de peace of mind dolog hogy mindig beírja az ember
-service password encryption			- szöveg type jelszó titkosítása
+
+```
+service password encryption
+```
+*szöveg type jelszó titkosítása*
 
 
 
@@ -83,7 +97,7 @@ ip route NetID SubnetMask "kimenő interface | next hopp IP"
 
 
 Research: OSI rétegmodell, tracert command
-icmp: ping protocol
+icmp: ping protocol (internet command protocol)
 
 layer 2 switchek mac cím alapján továbbítanak
 layer 3 swtichek ip cím alapján is továbbítanak, sok port, hardveres továbbítási kódolás, drágább
