--- a/2023_09_08_Halozat.md
+++ b/2023_09_08_Halozat.md
@@ -1,5 +1,5 @@
 Research: OSI rétegmodell
-icmp: ping protocol
+icmp: ping protocol (internet command protocol)
 
 layer 2 switchek mac cím alapján továbbítanak
 layer 3 swtichek ip cím alapján is továbbítanak, sok port, hardveres továbbítási kódolás, drágább
