--- a/2023-09-27.md
+++ b/2023-09-27.md
@@ -27,7 +27,7 @@ ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=500
 ```
 
 
-win után  (? - not yet known)
+webszerver (ha kell)
 
 ```
 ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=80 to-addresses=192.168.5.2 protocol=tcp
