--- a/2023-09-28_projekt.md
+++ b/2023-09-28_projekt.md
@@ -30,7 +30,7 @@ virtualbox előbb, aztán packet tracer
 
 
 **Viktor**
-- logó
+- logó - done
 - Packet tracer
 - ár lista (copy/paste)
 - parancsok PT: mitcsinálnak (nem konkrétan a parancsok)
