--- a/2023-10-03.md
+++ b/2023-10-03.md
@@ -2,7 +2,6 @@
 **fe08::1** : első hálózat privát
 **Host:** Házigazda, végponti eszköz
 **Node:** switch vagy router
-**ipv6 utsó ip: pl.:** 8C-1D-96-==CC-5E-D9==
 **LLA:** Link Local Address
 **GUA:** (global unicast address)
 **link local address default FE80::1 : ** - minden kliens innen megy ki
@@ -38,8 +37,8 @@ ipv6 nd other-config-flag
 ipv4 címzés bitek:N, H, n, h: network device, host bitek
 
 
-
-**cisco 8.2.7 kérdések**
+router
+**cisco 8.2.7**
 1. The SLAAC process uses RA messages and can also respond to RS messages from a host.
 2. The **ipv6 unicast-routing global config** command is required for a router to join the IPv6 all-routers group.
 3. SLAAC sets the flags to A=1. M=0, O=0.
@@ -99,11 +98,6 @@ shutdown
 end
 
 copy run start
-
-
-
-
-
 ```
 
 
