--- a/2023_09_08.md
+++ b/2023_09_08.md
@@ -40,7 +40,7 @@ ip ssh time-out 30
 user admin privilege 15 secret "jelszó"
 line vty 0 15
 transport input ssh
-login local		-helyi adatbázisból hitelesít (user admin privilege 15 secret "jelszó"
+login local		-helyi adatbázisból hitelesít (user admin privilege 15 secret "jelszó")
 exit
 copy run start
 ```
@@ -72,11 +72,11 @@ end
 
 Kényelmi / quality of life:
 ```
-no ip domain-lookup			- hibás parancs feloldás tiltása
-do terminal history size 250		- előzmény tároló méret növelése		
-line con 0	
-exec-timeout 0 0			- a konzol soha nem léptet ki - amikor kész a munka, illik vissza állítani normális időre
-logging synchronous			- rendszerüzenetek szinkronizálása - uninterrupted typing
+no ip domain-lookup
+do terminal history size 250
+line con 0
+exec-timeout 0 0
+logging synchronous
 ```
 
 
