--- a/2023_09_12_halozat.md
+++ b/2023_09_12_halozat.md
@@ -17,7 +17,7 @@ interface range
 - tracert: ping, de a packet menete folyamán echo-val meg tudjuk 
 - nézni milyen routereken, eszközökön megy keresztül
 
-**Osi modell:**, portszámok
+#OSI_modell:, #portszámok
 - 80-as port: http                  - a vpn nem a 80-as porton megy
 - 443-as port: https		- titkosított http, web
 - 21-es port: fttp
@@ -70,6 +70,31 @@ password *jelszó*
 login local
 transport input ssh
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
