--- a/2023-09-27.md
+++ b/2023-09-27.md
@@ -50,7 +50,7 @@ ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=80 
 time and currency format: magyar
 
 jelszó: #Aa12346789!
-
+**windows webserver**
 ```
 Install-windowsfeature AD-domain-services -includeManagementTools
 ```
@@ -98,6 +98,8 @@ this pc> properties> system properties> *pc name change*> "win10client"
 
 
 **TEST WEBSITE**
+**TEST WEBOLDAL**
+**TEST HTML**
 ```
 <HTML>
 
