--- a/2023-09-19.md
+++ b/2023-09-19.md
@@ -6,8 +6,8 @@ az ssh csak egyedi nevet fogad el
 5: viszonylati (session) réteg
 4: szállítása(2. (egfontosabb:) 2. port: forrás(véletlen) , 10 port ami megmondja hogy a túloldalon ki yúljon hozzá( 80)
 3: hálózatiréteg; forrás ip, cél ip
-2: adatkapcsolati réteg ()
-1: bitek: hardver
+2: adatkapcsolati réteg - kereteket küldözget
+1: bitek: hardver, physical
 
 **tcp/ip modell:**
 megkapta-e
