--- a/2023-10-26.md
+++ b/2023-10-26.md
@@ -18,7 +18,9 @@ Add-DHCPServerInDC -dnsname WADCORE1026GG.sulika.gg
 Get-DnsServerResourceRecord -ZoneName "sulika.gg" -RRType "A"
 
 
-Add-DnsServerResourceRecord -ZoneName "sulika.gg" -A -Name "ceg" -AllowUpdateAny -IPv4Address "192.168.5.3" -TimeToLive 01:00:00 –AgeRecord
+Add-DnsServerResourceRecord -ZoneName "sulika.gg" -A -Name "www" -AllowUpdateAny -IPv4Address "192.168.5.3" -TimeToLive 01:00:00 -AgeRecord
+
+Add-DnsServerResourceRecord -ZoneName "sulika.gg" -A -Name "ceg" -AllowUpdateAny -IPv4Address "192.168.5.3" -TimeToLive 01:00:00 -AgeRecord
 
 
 
@@ -30,5 +32,22 @@ server manager >file storage>core server> shares> *jobb fent leyíló: task* new
 
 
 tesztelése:
-fájlkezelő
+cmd \\gép
 
+
+
+
+netsh interface ipv4 set address ethernet gateway=192.168.5.1
+
+
+
+
+
+**Windows server core 2022 error 83 fix** 
+```
+Get-NetAdapter
+
+Remove-NetIPAddress -InterfaceAlias Ethernet0 -confirm:$False
+
+New-NetIPAddress -InterfaceAlias Ethernet0 -IPAddress 10.11.12.13 -PrefixLength 24 -DefaultGateway 10.11.12.1
+```
