--- a/2023-09-27.md
+++ b/2023-09-27.md
@@ -20,7 +20,7 @@ ip/dhcp-client/add interface=ether3 disabled=no
 
 ip address/add interface=ether2 address=192.168.5.1/24
 
-ip firewall/nat add chain=srcat out-interface=ether1 action=masquerade
+ip firewall/nat add chain=srcnat out-interface=ether1 action=masquerade
 
 ip firewall/nat add chain=dstnat in-interface=ether3 action=dst-nat dst-port=50000 to-adresses=192.168.5.2 to-ports=3389 protocol=tcp
 
