--- a/2023-11-08.md
+++ b/2023-11-08.md
@@ -57,9 +57,9 @@ rsat utána tartomány
 
 
 RSAT:
-active directory domain services
-DHCP server tools
-DNS server tools
-File Services tools
-group policy management tools
-server manager
+- active directory domain services
+- DHCP server tools
+- DNS server tools
+- File Services tools
+- group policy management tools
+- server manager
